--- a/css/_piercing.scss
+++ b/css/_piercing.scss
@@ -41,7 +41,8 @@
 
 @media only screen and (max-width:550px){
     #piercing p{
-        font-size: 1em;       
+        font-size: 1em;   
+        width :90%;    
     }
 }
 
