--- a/css/_piercing.scss
+++ b/css/_piercing.scss
@@ -42,7 +42,8 @@
 @media only screen and (max-width:550px){
     #piercing p{
         font-size: 1em;   
-        width: 90%;    
+         .piercing-pera{ width: 90%;}
+            
     }
 }
 
